--- a/webhooks/ActionsOnGoogleFulfillment.yaml
+++ b/webhooks/ActionsOnGoogleFulfillment.yaml
@@ -1,5 +1,6 @@
 handlers:
 - name: tea_consumption
 - name: wake_up_time
+- name: whole_story
 inlineCloudFunction:
   executeFunction: ActionsOnGoogleFulfillment
