--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
-      run: |
-        cd functions
-        npm install
-        npm test
+      - name: Test
+        run: | 
+          cd functions
+          npm install
+          npm test
+          npm run lint
