--- a/functions/package.json
+++ b/functions/package.json
@@ -25,12 +25,14 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^9.1.1",
     "typescript": "^3.9.9"
   },
