Removed the choises

--- a/custom/scenes/WholeStory.yaml
+++ b/custom/scenes/WholeStory.yaml
@@ -1,17 +1,6 @@
 intentEvents:
-- intent: actions.intent.YES
-  transitionToScene: Choose
-- intent: actions.intent.NO
-  transitionToScene: actions.scene.END_CONVERSATION
-- intent: actions.intent.
+- handler:
+    staticPromptName: static_prompt_2
+  intent: actions.intent.
 onEnter:
-  staticPrompt:
-    candidates:
-    - promptResponse:
-        firstSimple:
-          variants:
-          - speech: Would you like to hear another story?
-        suggestions:
-        - title: "Yes"
-        - title: "No"
   webhookHandler: whole_story
