--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,34 +8,38 @@ jobs:
   test-functions:
     name: Functions
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./functions
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
       - name: Test
+        working-directory: ${{env.working-directory}}
         run: | 
-          cd functions
           npm install
           npm test
           npm run lint
+
   test-etl:
     name: ETL
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./etl
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
       - name: Install dependencies
+        working-directory: ${{env.working-directory}}
         run: |
-          cd etl
           python -m pip install --upgrade pip
           pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
-          cd etl
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
