--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -46,4 +46,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test
         run: |
-          python -m unittest discover etl/test
+          python -m unittest discover test
